math-core/src/snapshots/math_core__parser__tests__space_internal_string_literal.snap
---
source: math-core/src/parser.rs
expression: "[CustomSpace, InternalStringLiteral(\"3em\")]"
---
[
  Space(Length(
    value: 3.0,
    unit: Em,
  )),
]
