math-core/src/snapshots/math_core__parser__tests__sqrt_number_with_dot.snap
---
source: math-core/src/parser.rs
expression: "\\sqrt{4.}"
---
[
  Sqrt(Row(
    nodes: [
      Number("4"),
      IdentifierChar('.', Default),
    ],
    attr: None,
  )),
]
