math-core/src/snapshots/math_core__parser__tests__sqrt_subscript.snap
---
source: math-core/src/parser.rs
expression: "\\sqrt x_i"
---
[
  Subscript(
    target: Sqrt(IdentifierChar('x', Default)),
    symbol: IdentifierChar('i', Default),
  ),
]
