math-core/src/snapshots/math_core__parser__tests__sqrt_subscript_and_degree.snap
---
source: math-core/src/parser.rs
expression: "\\sqrt[3] x_i"
---
[
  Subscript(
    target: Root(Number("3"), IdentifierChar('x', Default)),
    symbol: IdentifierChar('i', Default),
  ),
]
