math-core/src/snapshots/math_core__parser__tests__sub_big_paren.snap
---
source: math-core/src/parser.rs
expression: "x_\\big("
---
[
  Subscript(
    target: IdentifierChar('x', Default),
    symbol: SizedParen(Scale1, StretchableOp('(', Always)),
  ),
]
