math-core/src/snapshots/math_core__parser__tests__sub_number.snap
---
source: math-core/src/parser.rs
expression: x_123
---
[
  Subscript(
    target: IdentifierChar('x', Default),
    symbol: Number("1"),
  ),
  Number("23"),
]
