math-core/src/snapshots/math_core__parser__tests__text_internal_string_literal.snap
---
source: math-core/src/parser.rs
expression: "[Text(None), InternalStringLiteral(\"hi\")]"
---
[
  Text(None, "hi"),
]
