math-core/src/snapshots/math_core__parser__tests__text_internal_string_literal_and_other.snap
---
source: math-core/src/parser.rs
expression: "[Text(None), GroupBegin, Letter('a'), InternalStringLiteral(\"hi\"), GroupEnd]"
---
[
  Text(None, "ahi"),
]
